tests/harness/errors/170_io_fail_source_location.eu
# io.fail should carry the call-site source location in the error diagnostic
` { target: :main requires-io: true }
main: io.fail("deliberate failure for location test")
